--- a/notebooks/add05_example_format_read_ModelLevel.ipynb
+++ b/notebooks/add05_example_format_read_ModelLevel.ipynb
@@ -53,7 +53,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Expired time: 0.020 s\n"
+      "Expired time: 0.022 s\n"
      ]
     }
    ],
@@ -73,11 +73,11 @@
       "\n",
       "Pyaerocom ReadGridded\n",
       "---------------------\n",
-      "Model ID: GISS-MATRIX_GLOFIR0p5\n",
+      "Data ID: GISS-MATRIX_GLOFIR0p5\n",
       "Data directory: /lustre/storeA/project/aerocom/aerocom-users-database/AEROCOM-PHASE-III/GISS-MATRIX_GLOFIR0p5/renamed\n",
-      "Available experiments: ['GISS-MATRIX_GLOFIR0p5']\n",
+      "Available experiments: ['']\n",
       "Available years: [2008]\n",
-      "Available frequencies ['3hourly', 'daily', 'monthly']\n",
+      "Available frequencies ['3hourly' 'daily' 'monthly']\n",
       "Available variables: ['abs550aer', 'abs550aercs', 'dh', 'drybc', 'drydust', 'drynh4', 'dryno3', 'dryoa', 'dryso2', 'dryss', 'ec550aer', 'emibc', 'emidms', 'emidust', 'emioa', 'emiso2', 'emiso4', 'emisoa', 'emiss', 'hus', 'mmrbc', 'mmrdust', 'mmrnh4', 'mmrno3', 'mmroa', 'mmrso4', 'mmrss', 'od550aer', 'od550aercs', 'ps', 'rh', 'ta', 'ts', 'uas', 'vas', 'was', 'wetbc', 'wetdust', 'wetnh4', 'wetno3', 'wetoa', 'wetso2', 'wetso4', 'wetss']\n"
      ]
     }
