--- a/notebooks/add05_variables.ipynb
+++ b/notebooks/add05_variables.ipynb
@@ -72,13 +72,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Expired time: 0.022 s\n"
+      "Expired time: 0.016 s\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<pyaerocom.variable.VarCollection at 0x7fd06503bc50>"
+       "<pyaerocom.variable.VarCollection at 0x7f02ec091be0>"
       ]
      },
      "execution_count": 1,
@@ -1134,14 +1134,7 @@
       "standard_name: tendency_of_atmosphere_mass_content_of_sulfate_dry_aerosol_particles_due_to_dry_deposition; Unit: kg m-2 s-1\n",
       "\n",
       "drymsa\n",
-      "standard_name: tendency_of_atmosphere_mass_content_of_methanesulfonic_acid_due_to_dry_deposition; Unit: kg m-2 s-1"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
+      "standard_name: tendency_of_atmosphere_mass_content_of_methanesulfonic_acid_due_to_dry_deposition; Unit: kg m-2 s-1\n",
       "\n",
       "drydms\n",
       "standard_name: tendency_of_atmosphere_mass_content_of_dimethyl_sulfide_due_to_dry_deposition; Unit: kg m-2 s-1\n",
@@ -1210,7 +1203,14 @@
       "standard_name: tendency_of_atmosphere_mass_content_of_pm2p5_seasalt_dry_aerosol_particles_due_to_dry_deposition; Unit: kg m-2 s-1\n",
       "\n",
       "drypm2p5dust\n",
-      "standard_name: tendency_of_atmosphere_mass_content_of_pm2p5_dust_dry_aerosol_particles_due_to_dry_deposition; Unit: kg m-2 s-1\n",
+      "standard_name: tendency_of_atmosphere_mass_content_of_pm2p5_dust_dry_aerosol_particles_due_to_dry_deposition; Unit: kg m-2 s-1"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
       "\n",
       "dryoc\n",
       "standard_name: tendency_of_atmosphere_mass_content_of_particulate_organic_matter_dry_aerosol_particles_expressed_as_carbon_due_to_dry_deposition; Unit: kg m-2 s-1\n",
@@ -2171,7 +2171,13 @@
       "\n",
       "od550aer\n",
       "standard_name: atmosphere_optical_thickness_due_to_ambient_aerosol_particles; Unit: 1\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "od550aer\n",
       "standard_name: atmosphere_optical_thickness_due_to_ambient_aerosol_particles; Unit: 1\n",
       "\n",
