--- a/notebooks/tut06_intro_UngriddedData_and_StationData_classes.ipynb
+++ b/notebooks/tut06_intro_UngriddedData_and_StationData_classes.ipynb
@@ -80,7 +80,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Expired time: 0.018 s\n"
+      "Expired time: 0.022 s\n"
      ]
     },
     {
@@ -328,7 +328,7 @@
       "Contains instruments: ['sun_photometer']\n",
       "Total no. of meta-blocks: 163\n",
       "Filters that were applied:\n",
-      " Filter time log: 20190604164917\n",
+      " Filter time log: 20190618130802\n",
       "\tlatitude: (30, 60)\n",
       "\tlongitude: (0, 45)\n",
       "\taltitude: (0, 1000)\n"
@@ -772,7 +772,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fb53f312278>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f5a255438d0>"
       ]
      },
      "execution_count": 20,
@@ -861,6 +861,7 @@
       "data_version: None\n",
       "data_level: None\n",
       "revision_date: None\n",
+      "website: None\n",
       "ts_type_src: daily\n",
       "stat_merge_pref_attr: None\n",
       "data_revision: 20190425\n",
@@ -1413,7 +1414,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fb53f2e8c88>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f5a2537b828>"
       ]
      },
      "execution_count": 37,
