--- a/notebooks/tut04_intro_class_GriddedData.ipynb
+++ b/notebooks/tut04_intro_class_GriddedData.ipynb
@@ -53,7 +53,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Expired time: 0.014 s\n"
+      "Expired time: 0.022 s\n"
      ]
     }
    ],
@@ -411,7 +411,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This did not work...error message: NetcdfError(\"Could not load single cube from /lustre/storeA/project/aerocom/aerocom1/ECMWF_OSUITE_NRT_test/renamed/aerocom.ECMWF_OSUITE_NRT_test.daily.od550aer.2018.nc. Please specify var_name. Input file contains the following variables: ['od550bc', 'od550so4', 'od550aer', 'od550oa', 'od550dust']\",)\n"
+      "This did not work...error message: NetcdfError(\"Could not load single cube from /lustre/storeA/project/aerocom/aerocom1/ECMWF_OSUITE_NRT_test/renamed/aerocom.ECMWF_OSUITE_NRT_test.daily.od550aer.2018.nc. Please specify var_name. Input file contains the following variables: ['od550bc', 'od550oa', 'od550dust', 'od550aer', 'od550so4']\",)\n"
      ]
     }
    ],
