Worked on some tutorials and added development tutorials into new subfolder dev

--- a/notebooks/add01_intro_time_handling.ipynb
+++ b/notebooks/add01_intro_time_handling.ipynb
@@ -69,7 +69,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Expired time: 0.061 s\n"
+      "Expired time: 0.022 s\n"
      ]
     }
    ],
@@ -90,24 +90,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/jonasg/anaconda3/lib/python3.6/site-packages/iris/fileformats/_pyke_rules/compiled_krb/fc_rules_cf_fc.py:1932: UserWarning: Ignoring netCDF variable 'od550so4' invalid units '~'\n",
-      "  warnings.warn(msg)\n",
-      "/home/jonasg/anaconda3/lib/python3.6/site-packages/iris/fileformats/_pyke_rules/compiled_krb/fc_rules_cf_fc.py:1932: UserWarning: Ignoring netCDF variable 'od550dust' invalid units '~'\n",
-      "  warnings.warn(msg)\n",
-      "/home/jonasg/anaconda3/lib/python3.6/site-packages/iris/fileformats/_pyke_rules/compiled_krb/fc_rules_cf_fc.py:1932: UserWarning: Ignoring netCDF variable 'od550oa' invalid units '~'\n",
-      "  warnings.warn(msg)\n",
-      "/home/jonasg/anaconda3/lib/python3.6/site-packages/iris/fileformats/_pyke_rules/compiled_krb/fc_rules_cf_fc.py:1932: UserWarning: Ignoring netCDF variable 'od550aer' invalid units '~'\n",
-      "  warnings.warn(msg)\n",
-      "/home/jonasg/anaconda3/lib/python3.6/site-packages/iris/fileformats/_pyke_rules/compiled_krb/fc_rules_cf_fc.py:1932: UserWarning: Ignoring netCDF variable 'od550bc' invalid units '~'\n",
-      "  warnings.warn(msg)\n",
-      "Ignoring input name=ECMWF_OSUITE\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Ignoring input name=AATSR\n"
+      "Overwriting unit unknown in cube od550aer with value \"1\"\n"
      ]
     }
    ],
@@ -252,7 +235,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TypeError(\"Cannot convert input [2008-01-01 00:00:00] of type <class 'cftime._cftime.DatetimeJulian'> to Timestamp\",)\n"
+      "TypeError(\"Cannot convert input [2008-01-01 00:00:00] of type <class 'cftime._cftime.DatetimeJulian'> to Timestamp\")\n"
      ]
     }
    ],
@@ -339,7 +322,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "88.2 ms ± 15.4 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "96 ms ± 611 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -357,7 +340,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "76.1 ms ± 756 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "97.9 ms ± 487 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -382,7 +365,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "83.6 ms ± 6.81 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "99 ms ± 1.15 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -400,7 +383,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "86.7 ms ± 2.76 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "99.9 ms ± 685 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -429,7 +412,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.59 ms ± 329 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "4.17 ms ± 48.5 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -538,7 +521,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "253 µs ± 26.3 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "274 µs ± 2.59 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -563,7 +546,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.2 ms ± 721 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "5.87 ms ± 138 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -590,7 +573,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "252 µs ± 18.8 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "310 µs ± 5.88 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -608,7 +591,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.64 ms ± 57.3 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "5.86 ms ± 44.2 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -634,7 +617,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
