--- a/notebooks/add06_variables.ipynb
+++ b/notebooks/add06_variables.ipynb
@@ -72,13 +72,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Expired time: 0.016 s\n"
+      "Expired time: 0.021 s\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<pyaerocom.variable.VarCollection at 0x7f02ec091be0>"
+       "<pyaerocom.variable.VarCollection at 0x7fc2fb283a90>"
       ]
      },
      "execution_count": 1,
@@ -160,7 +160,9 @@
        " 'od865aer',\n",
        " 'od870aer',\n",
        " 'od550aer',\n",
-       " 'od550aer']"
+       " 'od550aer',\n",
+       " 'od550lt1aer',\n",
+       " 'od550gt1aer']"
       ]
      },
      "execution_count": 4,
@@ -231,7 +233,9 @@
        " 'abs550so4',\n",
        " 'abs550ss',\n",
        " 'od550aer',\n",
-       " 'od550aer']"
+       " 'od550aer',\n",
+       " 'abs550aer',\n",
+       " 'abs550aer']"
       ]
      },
      "execution_count": 5,
@@ -259,7 +263,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sconcso4pr: surface_consentration_of_sulphor\n",
       "od550aer: atmosphere_optical_thickness_due_to_ambient_aerosol_particles\n",
       "abs550aer: atmosphere_absorption_optical_thickness_due_to_ambient_aerosol_particles\n",
       "od440aer: atmosphere_optical_thickness_due_to_ambient_aerosol_particles\n",
@@ -267,6 +270,8 @@
       "ec550aer: volume_extinction_coefficient_in_air_due_to_ambient_aerosol_particles\n",
       "ec532aer: volume_extinction_coefficient_in_air_due_to_ambient_aerosol_particles\n",
       "ang4487aer: angstrom_exponent_of_ambient_aerosol_in_air\n",
+      "ang5587aer: angstrom_exponent_of_ambient_aerosol_in_air\n",
+      "ang4470aer: angstrom_exponent_of_ambient_aerosol_in_air\n",
       "z: altitude\n",
       "time: time\n",
       "time_bnds: time\n",
@@ -688,7 +693,13 @@
       "wa: upward_air_velocity\n",
       "od550aer: atmosphere_optical_thickness_due_to_ambient_aerosol_particles\n",
       "od550aer: atmosphere_optical_thickness_due_to_ambient_aerosol_particles\n",
+      "abs550aer: atmosphere_absorption_optical_thickness_due_to_ambient_aerosol_particles\n",
+      "abs550aer: atmosphere_absorption_optical_thickness_due_to_ambient_aerosol_particles\n",
       "ang4487aer: angstrom_exponent_of_ambient_aerosol_in_air\n",
+      "ang4487aer: angstrom_exponent_of_ambient_aerosol_in_air\n",
+      "ang4487aer: angstrom_exponent_of_ambient_aerosol_in_air\n",
+      "ec550aer: volume_extinction_coefficient_in_air_due_to_ambient_aerosol_particles\n",
+      "rh: relative_humidy\n",
       "rh: relative_humidy\n",
       "rh: relative_humidy\n",
       "z: altitude\n",
@@ -728,9 +739,6 @@
       "default\n",
       "standard_name: None; Unit: 1\n",
       "\n",
-      "sconcso4pr\n",
-      "standard_name: surface_consentration_of_sulphor; Unit: mgS/L\n",
-      "\n",
       "od550aer\n",
       "standard_name: atmosphere_optical_thickness_due_to_ambient_aerosol_particles; Unit: 1\n",
       "\n",
@@ -756,6 +764,12 @@
       "standard_name: volume_extinction_coefficient_in_air_due_to_ambient_aerosol_particles; Unit: 1/Mm\n",
       "\n",
       "scatc550aer\n",
+      "standard_name: None; Unit: 1/Mm\n",
+      "\n",
+      "scatc440aer\n",
+      "standard_name: None; Unit: 1/Mm\n",
+      "\n",
+      "scatc700aer\n",
       "standard_name: None; Unit: 1/Mm\n",
       "\n",
       "scatc550lt1aer\n",
@@ -795,6 +809,12 @@
       "standard_name: None; Unit: 1\n",
       "\n",
       "ang4487aer\n",
+      "standard_name: angstrom_exponent_of_ambient_aerosol_in_air; Unit: 1\n",
+      "\n",
+      "ang5587aer\n",
+      "standard_name: angstrom_exponent_of_ambient_aerosol_in_air; Unit: 1\n",
+      "\n",
+      "ang4470aer\n",
       "standard_name: angstrom_exponent_of_ambient_aerosol_in_air; Unit: 1\n",
       "\n",
       "angabs4487aer\n",
@@ -1138,7 +1158,13 @@
       "\n",
       "drydms\n",
       "standard_name: tendency_of_atmosphere_mass_content_of_dimethyl_sulfide_due_to_dry_deposition; Unit: kg m-2 s-1\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "dryss\n",
       "standard_name: tendency_of_atmosphere_mass_content_of_seasalt_dry_aerosol_particles_due_to_dry_deposition; Unit: kg m-2 s-1\n",
       "\n",
@@ -1203,14 +1229,7 @@
       "standard_name: tendency_of_atmosphere_mass_content_of_pm2p5_seasalt_dry_aerosol_particles_due_to_dry_deposition; Unit: kg m-2 s-1\n",
       "\n",
       "drypm2p5dust\n",
-      "standard_name: tendency_of_atmosphere_mass_content_of_pm2p5_dust_dry_aerosol_particles_due_to_dry_deposition; Unit: kg m-2 s-1"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
+      "standard_name: tendency_of_atmosphere_mass_content_of_pm2p5_dust_dry_aerosol_particles_due_to_dry_deposition; Unit: kg m-2 s-1\n",
       "\n",
       "dryoc\n",
       "standard_name: tendency_of_atmosphere_mass_content_of_particulate_organic_matter_dry_aerosol_particles_expressed_as_carbon_due_to_dry_deposition; Unit: kg m-2 s-1\n",
@@ -1359,58 +1378,70 @@
       "wethgp\n",
       "standard_name: tendency_of_atmosphere_mass_content_of_mercury_dry_aerosol_particles_due_to_wet_deposition; Unit: kg m-2 s-1\n",
       "\n",
-      "sconcso4\n",
+      "concso4pr\n",
+      "standard_name: None; Unit: g m-3\n",
+      "\n",
+      "concso4\n",
       "standard_name: None; Unit: ug m-3\n",
       "\n",
-      "sconcso2\n",
+      "concso2\n",
       "standard_name: None; Unit: ug m-3\n",
       "\n",
-      "sconcpm10\n",
+      "concdust\n",
       "standard_name: None; Unit: ug m-3\n",
       "\n",
-      "sconcpm25\n",
+      "concpm10\n",
       "standard_name: None; Unit: ug m-3\n",
       "\n",
-      "sconcso4t\n",
+      "concpm25\n",
       "standard_name: None; Unit: ug m-3\n",
       "\n",
-      "sconcso4c\n",
+      "concso4t\n",
       "standard_name: None; Unit: ug m-3\n",
       "\n",
-      "sconcbc\n",
+      "concso4c\n",
       "standard_name: None; Unit: ug m-3\n",
       "\n",
-      "sconcss\n",
+      "concbc\n",
       "standard_name: None; Unit: ug m-3\n",
       "\n",
-      "sconcpom\n",
+      "concss\n",
       "standard_name: None; Unit: ug m-3\n",
       "\n",
-      "sconcnh3\n",
+      "concpom\n",
       "standard_name: None; Unit: ug m-3\n",
       "\n",
-      "sconcno3\n",
+      "concnh3\n",
       "standard_name: None; Unit: ug m-3\n",
       "\n",
-      "sconcnh4\n",
+      "concno3\n",
       "standard_name: None; Unit: ug m-3\n",
       "\n",
-      "sconchno3\n",
+      "concnh4\n",
       "standard_name: None; Unit: ug m-3\n",
       "\n",
-      "sconctno3\n",
+      "conchno3\n",
       "standard_name: None; Unit: ug m-3\n",
       "\n",
-      "sconcno2\n",
+      "conctno3\n",
       "standard_name: None; Unit: ug m-3\n",
       "\n",
-      "sconceqbc\n",
+      "concno2\n",
       "standard_name: None; Unit: ug m-3\n",
       "\n",
-      "sconcoa\n",
+      "conceqbc\n",
       "standard_name: None; Unit: ug m-3\n",
       "\n",
-      "sconco3\n",
+      "concoa\n",
+      "standard_name: None; Unit: ug m-3\n",
+      "\n",
+      "conctc\n",
+      "standard_name: None; Unit: ug m-3\n",
+      "\n",
+      "conco3\n",
+      "standard_name: None; Unit: ug m-3\n",
+      "\n",
+      "concco\n",
       "standard_name: None; Unit: ug m-3\n",
       "\n",
       "vmro3\n",
@@ -2107,7 +2138,7 @@
       "standard_name: mass_fraction_of_water_in_pm2p5_ambient_aerosol_particles_in_air; Unit: kg kg-1\n",
       "\n",
       "rh\n",
-      "standard_name: relative_humidy; Unit: 1\n",
+      "standard_name: relative_humidy; Unit: %\n",
       "\n",
       "vmrcodirect50d\n",
       "standard_name: mole_fraction_of_artificial_tracer_with_fixed_lifetime_in_air; Unit: mole mole-1\n",
@@ -2171,15 +2202,27 @@
       "\n",
       "od550aer\n",
       "standard_name: atmosphere_optical_thickness_due_to_ambient_aerosol_particles; Unit: 1\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "od550aer\n",
       "standard_name: atmosphere_optical_thickness_due_to_ambient_aerosol_particles; Unit: 1\n",
+      "\n",
+      "od550lt1aer\n",
+      "standard_name: None; Unit: 1\n",
+      "\n",
+      "od550gt1aer\n",
+      "standard_name: None; Unit: 1\n",
+      "\n",
+      "abs550aer\n",
+      "standard_name: atmosphere_absorption_optical_thickness_due_to_ambient_aerosol_particles; Unit: 1\n",
+      "\n",
+      "abs550aer\n",
+      "standard_name: atmosphere_absorption_optical_thickness_due_to_ambient_aerosol_particles; Unit: 1\n",
+      "\n",
+      "ang4487aer\n",
+      "standard_name: angstrom_exponent_of_ambient_aerosol_in_air; Unit: 1\n",
+      "\n",
+      "ang4487aer\n",
+      "standard_name: angstrom_exponent_of_ambient_aerosol_in_air; Unit: 1\n",
       "\n",
       "ang4487aer\n",
       "standard_name: angstrom_exponent_of_ambient_aerosol_in_air; Unit: 1\n",
@@ -2187,11 +2230,23 @@
       "absc550aer\n",
       "standard_name: None; Unit: 1/Mm\n",
       "\n",
-      "rh\n",
-      "standard_name: relative_humidy; Unit: 1\n",
+      "absc550aer\n",
+      "standard_name: None; Unit: 1/Mm\n",
+      "\n",
+      "absc550aer\n",
+      "standard_name: None; Unit: 1/Mm\n",
+      "\n",
+      "ec550aer\n",
+      "standard_name: volume_extinction_coefficient_in_air_due_to_ambient_aerosol_particles; Unit: 1/Mm\n",
       "\n",
       "rh\n",
-      "standard_name: relative_humidy; Unit: 1\n",
+      "standard_name: relative_humidy; Unit: %\n",
+      "\n",
+      "rh\n",
+      "standard_name: relative_humidy; Unit: %\n",
+      "\n",
+      "rh\n",
+      "standard_name: relative_humidy; Unit: %\n",
       "\n",
       "z\n",
       "standard_name: altitude; Unit: m\n",
@@ -2246,7 +2301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
