--- a/getting_started_analysis.ipynb
+++ b/getting_started_analysis.ipynb
@@ -75,6 +75,8 @@
    ],
    "source": [
     "import pyaerocom as pya\n",
+    "import logging\n",
+    "logging.getLogger().setLevel(logging.ERROR) # Set level in information outputted by pyaerocom to the console.\n",
     "pya.__version__"
    ]
   },
@@ -120,7 +122,7 @@
     }
    ],
    "source": [
-    "from pyaerocom.testdata_access import initialise\n",
+    "from pyaerocom.access_testdata import initialise\n",
     "initialise()"
    ]
   },
@@ -5150,7 +5152,8 @@
    "hash": "4a7b89c723fcac0e056e2fc6b4f368f26ab64e73796f0dabf71452e7abad2370"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit ('pya': conda)",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -5163,7 +5166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.1"
   }
  },
  "nbformat": 4,
